--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@babel/runtime": "^7.1.2",
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "react": "16.5.0",
-    "react-native": "0.57.1"
+    "react-native": "0.57.1",
+    "react-native-vector-icons": "^6.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
