--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beerMap",
-  "version": "0.0.1",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -12,7 +12,8 @@
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "react": "16.5.0",
     "react-native": "0.57.1",
-    "react-native-vector-icons": "^6.0.0"
+    "react-native-vector-icons": "^6.0.0",
+    "react-native-version-number": "^0.3.4"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
