--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-vector-icons": "^6.0.0",
-    "react-native-version-number": "^0.3.4"
+    "react-native-version-number": "^0.3.4",
+    "rn-sliding-up-panel": "^1.2.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
