--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,15 +149,20 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-version-number')
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-version-number')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    compile (project(':mapbox-react-native-mapbox-gl')) {
-        compile ('com.squareup.okhttp3:okhttp:3.6.0') {
+    implementation (project(':mapbox-react-native-mapbox-gl')) {
+        implementation ('com.squareup.okhttp3:okhttp:3.6.0') {
             force = true
         }
     }
+    implementation "com.google.android.gms:play-services-base:15.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.3"
+    implementation "com.google.firebase:firebase-auth:16.0.3"
+    implementation "com.google.firebase:firebase-invites:16.0.3"
 }
 
 // Run this once to be able to run the application with BUCK
@@ -166,3 +171,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
