--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "react": "16.5.0",
     "react-native": "0.57.1",
+    "react-native-firebase": "^5.0.0",
     "react-native-vector-icons": "^6.0.0",
     "react-native-version-number": "^0.3.4",
+    "react-navigation": "^2.18.1",
     "rn-sliding-up-panel": "^1.2.1"
   },
   "devDependencies": {
